--- a/project quan ly giuong benh/project quan ly giuong benh.csproj
+++ b/project quan ly giuong benh/project quan ly giuong benh.csproj
@@ -66,6 +66,12 @@
     <Compile Include="EditMember.Designer.cs">
       <DependentUpon>EditMember.cs</DependentUpon>
     </Compile>
+    <Compile Include="fAdminEditMember.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fAdminEditMember.Designer.cs">
+      <DependentUpon>fAdminEditMember.cs</DependentUpon>
+    </Compile>
     <Compile Include="fMapBlock.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,11 +122,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="fXuatVien.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="fXuatVien.Designer.cs">
+      <DependentUpon>fXuatVien.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="EditMember.resx">
       <DependentUpon>EditMember.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fAccountProfile.resx">
       <DependentUpon>fAccountProfile.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="fAdminEditMember.resx">
+      <DependentUpon>fAdminEditMember.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="fMapBlock.resx">
       <DependentUpon>fMapBlock.cs</DependentUpon>
@@ -152,6 +167,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="fXuatVien.resx">
+      <DependentUpon>fXuatVien.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
