+ Sửa lại datagridview có tính năng lọc và sort + thêm 1 tầng cấp cứu cho lên đầu danh sách + bỏ phòng sắp khỏi
+ thêm nút back lại bệnh nhân xuất viện, chuyển tuyến
+ viết hàm check kiểm tra và thông báo số ngày bệnh nhân back lại ở lại trong viện
+ lập danh sách những người back lại ở lại quá 3 ngày để đky kit xét nghiệm

--- a/project quan ly giuong benh/App.config
+++ b/project quan ly giuong benh/App.config
@@ -1,5 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="project_quan_ly_giuong_benh.Properties.Settings.QuanLyBenhNhanF0ConnectionString"
+            connectionString="Data Source=HXN\SQLEXPRESS;Initial Catalog=QuanLyBenhNhanF0;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
